# markflow

./: .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION.md  LICENSE.txt  Makefile  README.md  docker-compose.yml  poetry-aliases.sh  pyproject.toml
.github/workflows/: ensure_green.yml  release.yml
markflow/: __main__.py  _argparse.py  exceptions.py  parser.py  reformat_markdown.py  typing.py
markflow/_utils/: __init__.py  _utils.py  textwrap.py
markflow/detectors/: __init__.py  _lines.py  atx_heading.py  blank_line.py  block_quote.py  bullet_list.py  fenced_code_block.py  footnote.py  heading.py  horizontal_line.py  indented_code_block.py  link_reference_definition.py  list.py  ordered_list.py  paragraph.py  setext_heading.py  table.py  thematic_break.py
markflow/formatters/: __init__.py  atx_heading.py  base.py  blank_line.py  block_quote.py  code_block.py  fenced_code_block.py  horizontal_line.py  indented_code_block.py  link_reference_definition.py  list.py  lists.py  paragraph.py  setext_heading.py  table.py  textwrap.py  thematic_break.py  util.py
mdformat/: __init__.py  __main__.py
mdformat/detectors/: __init__.py  code_block.py  heading.py  (+3 more)
stubs/: pytest.pyi
tests/: test_atx_heading.py  test_block_quote.py  test_code_block.py  test_fenced_code_block.py  test_files.py  test_footnote.py  test_heading.py  test_horizontal_line.py  test_indented_code_block.py  test_link_reference_definition.py  test_list.py  test_paragraph.py  test_separator.py  test_setext_heading.py  test_table.py  test_util.py  test_utils.py  test_wrap.py  util.py
(+58 files in other folders)
