[tool.poetry]
name = "markflow"
version = "0.2.0"
description = "Make your Markdown Sparkle!"
authors = ["Joshua Holland <jholland@duosecurity.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pygments = "*"
rich = "*"

[tool.poetry.dev-dependencies]
black = "==19.10b0"
commonmark = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
markflow = "markflow.__main__:__main__"
